--- a/src/app/crear-persona/crear-persona.component.html
+++ b/src/app/crear-persona/crear-persona.component.html
@@ -1,4 +1,3 @@
-<div *ngIf="showPersona">
 
     <h1> Formulario de Persona</h1>
 
@@ -20,15 +19,12 @@
 
     </div>
 
-    Status Formulario: {{personaForm.status}}
+    <p>Status Formulario: {{personaForm.status}}</p>
  
-    <button >Guardar</button>
+    <!-- <button >Guardar</button> -->
+    <button mat-raised-button color="primary" type="submit" routerLink="/consultar-persona" routerLinkActive="active" >Guardar</button>
+    <!-- <button (click)="goToListar(user)">Agregar</button> -->
+    <!-- <button type="submit"[route="['/consultar-persona',personaForm.value]">Guardar</button> -->
 
 </form>
 
-</div>
-
-<div *ngIf="showConsultar">
-    <!-- <app-consultar-persona [consultar]="persona"></app-consultar-persona> -->
-    <app-consultar-persona></app-consultar-persona>
-</div>
